@@ -11,14 +11,14 @@ module t;
       int sum = 0;
       for (int i=0; i<4; i++) begin
          sum = sum + SIZES[i];
-         calc_sums[i][31:0] = sum;
+         calc_sums[i] = sum;
+         //TODO: calc_sums[i][31:0] = sum;
       end
    endfunction
 
    parameter int SUMS[3:0] = calc_sums();
 
    initial begin
-      $display("%d ",SUMS[0]);
       if (SUMS[0] != 4) $stop;
       if (SUMS[1] != 4+3) $stop;
       if (SUMS[2] != 4+3+2) $stop;
